I fixed the nav menu height on mobile

--- a/src/scss/components/_hamburger.scss
+++ b/src/scss/components/_hamburger.scss
@@ -3,6 +3,8 @@
 //HAMBURGER MENU
 
 .hamburger {
+  height: fit-content;
+  align-self: center;
   position: relative;
   background: none;
   border: 0;
