--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -3,4 +3,5 @@
 .logo {
   width: fit-content;
   z-index: 1000;
+  align-self: center;
 }
