--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -4,9 +4,13 @@
   display: flex;
   align-items: center;
   &__container {
-    display: flex;
-    position: relative;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     justify-content: space-between;
+    @media screen and (max-height: 32em) {
+      height: initial;
+    }
   }
   &__menu {
     transform: translateX((calc(100vw)));
